// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StepIndicator > renders horizontal orientation 1`] = `
<div
  class="flex flex-row items-center gap-0"
>
  <div
    class="flex flex-row items-center"
  >
    <div
      class="flex flex-col items-center"
    >
      <div
        aria-label="Step 1: Account — complete"
        class="w-8 h-8 rounded-full border-2 flex items-center justify-center flex-shrink-0 bg-cyan border-cyan"
      >
        <svg
          fill="none"
          height="14"
          viewBox="0 0 14 14"
          width="14"
        >
          <path
            class="text-background"
            d="M2 7l4 4 6-7"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </div>
      <span
        class="mt-2 font-body text-xs text-center text-text"
      >
        Account
      </span>
    </div>
    <div
      class="h-px w-16 mx-2 mb-6 bg-cyan"
    />
  </div>
  <div
    class="flex flex-row items-center"
  >
    <div
      class="flex flex-col items-center"
    >
      <div
        aria-label="Step 2: Profile — current"
        class="w-8 h-8 rounded-full border-2 flex items-center justify-center flex-shrink-0 border-cyan bg-background ring-2 ring-cyan ring-offset-2 ring-offset-background"
      >
        <span
          class="font-mono text-xs text-cyan"
        >
          2
        </span>
      </div>
      <span
        class="mt-2 font-body text-xs text-center text-cyan"
      >
        Profile
      </span>
    </div>
    <div
      class="h-px w-16 mx-2 mb-6 bg-border"
    />
  </div>
  <div
    class="flex flex-row items-center"
  >
    <div
      class="flex flex-col items-center"
    >
      <div
        aria-label="Step 3: Launch — upcoming"
        class="w-8 h-8 rounded-full border-2 flex items-center justify-center flex-shrink-0 border-border bg-background"
      >
        <span
          class="font-mono text-xs text-text-muted"
        >
          3
        </span>
      </div>
      <span
        class="mt-2 font-body text-xs text-center text-text-muted"
      >
        Launch
      </span>
    </div>
  </div>
</div>
`;

exports[`StepIndicator > renders vertical orientation 1`] = `
<div
  class="flex flex-col gap-0"
>
  <div
    class="flex flex-col items-start"
  >
    <div
      class="flex flex-col items-center"
    >
      <div
        aria-label="Step 1: Account — complete"
        class="w-8 h-8 rounded-full border-2 flex items-center justify-center flex-shrink-0 bg-cyan border-cyan"
      >
        <svg
          fill="none"
          height="14"
          viewBox="0 0 14 14"
          width="14"
        >
          <path
            class="text-background"
            d="M2 7l4 4 6-7"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </div>
      <span
        class="mt-2 font-body text-xs text-center text-text"
      >
        Account
      </span>
    </div>
    <div
      class="w-px h-8 ml-4 mt-1 bg-cyan"
    />
  </div>
  <div
    class="flex flex-col items-start"
  >
    <div
      class="flex flex-col items-center"
    >
      <div
        aria-label="Step 2: Profile — current"
        class="w-8 h-8 rounded-full border-2 flex items-center justify-center flex-shrink-0 border-cyan bg-background ring-2 ring-cyan ring-offset-2 ring-offset-background"
      >
        <span
          class="font-mono text-xs text-cyan"
        >
          2
        </span>
      </div>
      <span
        class="mt-2 font-body text-xs text-center text-cyan"
      >
        Profile
      </span>
    </div>
    <div
      class="w-px h-8 ml-4 mt-1 bg-border"
    />
  </div>
  <div
    class="flex flex-col items-start"
  >
    <div
      class="flex flex-col items-center"
    >
      <div
        aria-label="Step 3: Launch — upcoming"
        class="w-8 h-8 rounded-full border-2 flex items-center justify-center flex-shrink-0 border-border bg-background"
      >
        <span
          class="font-mono text-xs text-text-muted"
        >
          3
        </span>
      </div>
      <span
        class="mt-2 font-body text-xs text-center text-text-muted"
      >
        Launch
      </span>
    </div>
  </div>
</div>
`;
